# cibica

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: Black_Sphere_Labelling_A.csv  Black_Sphere_Labelling_B.csv  CHANGELOG.md  Ground_Truth.csv  LabeledData.csv  cohort.csv  schema.md
scripts/: run_experiment.py  run_labeling_analysis.py
src/: .gitignore
src/cibica/: __init__.py  cli.py  core.py  data.py  draw.py  estimate.py  io.py  preprocessing.py
src/cibica/baselines/: __init__.py  hough.py  qi.py  rcd.py  rht.py
src/cibica/visualization/: __init__.py  _common.py  ablation.py  error_histogram.py  jaccard_distribution.py  pixel_combinations.py  qualitative.py  triplet_sweep.py
tests/: test_basic.py  test_cli_coverage.py  test_dataset_generic.py  test_reproduction.py  test_smoke.py  test_visualization_unit.py
