[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cibica"
version = "0.1.0"
description = "Circle estimation by CIBICA with example datasets."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Esteban Román Catafau", email = "esteban.roman@nordlinglab.org"},
    {name = "Torbjörn E. M. Nordling", email = "t@nordlinglab.org"},
]
keywords = [
    "circle estimation",
    "circle fitting",
    "gradient-free",
    "motion blur",
    "degraded images",
    "clinical video",
    "real-time visual computing",
    "Parkinson's disease",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.6",
    "opencv-python>=4.5",
    "pandas>=1.2",
    "matplotlib>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/nordlinglab/cibica"
Repository = "https://github.com/nordlinglab/cibica"

[tool.hatch.build.targets.wheel]
packages = ["src/cibica"]

# Ship the bundled example dataset inside the wheel/sdist even though the files
# are non-Python (and so that VCS-ignore rules can never strip them).
[tool.hatch.build]
artifacts = [
    "src/cibica/data/**/*.png",
    "src/cibica/data/**/*.csv",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
