[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cibica"
version = "1.2.0"
description = "Circle estimation by CIBICA with example datasets."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Esteban Román Catafau", email = "esteban.roman@nordlinglab.org"},
    {name = "Torbjörn E. M. Nordling", email = "t@nordlinglab.org"},
]
keywords = [
    "circle estimation",
    "circle fitting",
    "gradient-free",
    "motion blur",
    "degraded images",
    "clinical video",
    "real-time visual computing",
    "Parkinson's disease",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.6",
    "opencv-python>=4.5",
    "pandas>=1.2",
    "matplotlib>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.0",
]

[project.scripts]
cibica = "cibica.cli:main"

[project.urls]
Homepage = "https://github.com/nordlinglab/cibica"
Repository = "https://github.com/nordlinglab/cibica"
DOI = "https://doi.org/10.5281/zenodo.20790416"

[tool.hatch.build.targets.wheel]
packages = ["src/cibica"]

# The wheel ships code only. The example dataset is kept separate from the
# source (in the repository's data/ directory, not in the package) and is
# obtained by cloning the repository, never bundled into the built artifact.

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# The legacy scientific modules use mathematical matrix notation (e.g. X, N_H),
# the published public-API function names (CIBICA, HOUGH, LS_circle), and the
# OpenCV HoughCircles parameter names (minDist, minRadius, ...). Renaming these
# would break the API or reduce mathematical readability, so the pep8-naming
# rules N802 (function), N803 (argument) and N806 (local) are scoped out for
# these files only. New modules (io, estimate, cli) keep full naming checks.
[tool.ruff.lint.per-file-ignores]
"src/cibica/core.py" = ["N802", "N803", "N806"]
"src/cibica/preprocessing.py" = ["N802", "N803", "N806"]
"src/cibica/baselines/*.py" = ["N802", "N803", "N806"]
"scripts/run_experiment.py" = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
